[iOS][Signin] Fixing workflow when starting the sign-in in Recent Tabs

The SigninPromoViewMediator should not be deallocated until the sign-in
is finished. When the user clicks on "Continue as ...", the sign-in
is done as soon as the sign-in dialogs arrives.

RecentTabsTableViewController should not be updated as long as the
sign-in started by SigninPromoViewMediator is in progress.

Once the sign-in is done, the RecentTabsTableViewController can be
reloaded.

cronet;master.tryserver.chromium.mac:ios-simulator-full-configs

Bug: 798443
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I4a0937986e236473a7c0314c056cf437a0088c36
Reviewed-on: https://chromium-review.googlesource.com/846995
Commit-Queue: Jérôme Lebel <jlebel@chromium.org>
Reviewed-by: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#526678}
Former-commit-id: 5ca4ade7bd117989da68f928c6f05b2c82ca08e0