ios/chrome/browser/ui/ntp/recent_tabs/recent_tabs_table_coordinator.mm
@@ -251,4 +251,9 @@
   [self.delegate updateNtpBarShadowForPanelController:self];
 }
 
+- (void)refreshSessionsViewRecentTabsTableViewController:
+    (RecentTabsTableViewController*)controller {
+  [self refreshSessionsView];
+}
+
 @end
