ios/chrome/browser/ui/ntp/recent_tabs/recent_tabs_table_view_controller.h
@@ -29,6 +29,10 @@ extern NSString* const kRecentTabsTableViewControllerAccessibilityIdentifier;
 @protocol RecentTabsTableViewControllerDelegate<NSObject>
 // Tells the delegate when the table view content scrolled or changed size.
 - (void)recentTabsTableViewContentMoved:(UITableView*)tableView;
+
+// Tells the delegate to refresh the session view.
+- (void)refreshSessionsViewRecentTabsTableViewController:
+    (RecentTabsTableViewController*)controller;
 @end
 
 // Controls the content of a UITableView.
